--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - '8'
 
-before_install: npm run build
+before_install: npm install && npm run build
 
 deploy:
   provider: firebase
