--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
   - '8'
+
+jobs:
+  include:
+    - stage: "Tests"
+      name: "Quality Test"
+      script: 
+        cd src
